# audio-convert-mod

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  TODO  audio-convert-mod.spec.in  configure.ac  decode.py.test  encode.py.test  sample-audio.tar.bz2
po/: POTFILES.in  zh_CN.po
src/: BugReport.glade  Makefile.am  acm-runapp.pyw  audio-convert-mod-kde3.desktop  audio-convert-mod-kde4.desktop  audio-convert-mod.desktop  audio-convert-mod.glade
src/audio_convert_mod/: Makefile.am  __init__.py.in  acmlogger.py  config.py  const.py  formats.py  i18n.py  interface.py  widgets.py
